styles/globals.css
:root {
  --text-cafe: rgb(221, 188, 41);
  --text-cafe-dark: rgb(175, 116, 7);
  --text-black: rgba(17, 24, 39, 1);
  --text-white-100: rgba(255, 255, 255, 1);
}

html,
body {
  min-height: 100vh;
  padding: 0;
  margin: 0;
  font-family: IBMPlexSans, Pacifico-Regular, -apple-system, BlinkMacSystemFont,
    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
    Helvetica Neue, sans-serif;

  background: url("/static/background.png");
  background-repeat: no-repeat;
  background-size: cover;
  color: var(--text-cafe-dark);
}

@font-face {
  font-family: "Pacifico-Regular";
  font-style: normal;
  font-weight: 200;
  src: url(/fonts/Pacifico-Regular.ttf) format("truetype");
}

@font-face {
  font-family: "IBMPlexSans";
  font-style: normal;
  font-weight: 500;
  src: url(/fonts/IBMPlexSans-Regular.ttf) format("truetype");
}

@font-face {
  font-family: "IBMPlexSans";
  font-style: normal;
  font-weight: 600;
  src: url(/fonts/IBMPlexSans-SemiBold.ttf) format("truetype");
}

@font-face {
  font-family: "IBMPlexSans";
  font-style: normal;
  font-weight: 700;
  src: url(/fonts/IBMPlexSans-Bold.ttf) format("truetype");
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

p {
  font-weight: 500;
}

h1,
h2,
h3,
h4,
h5,
h6,
hr,
p,
pre {
  margin: 0;
}

button {
  background-color: transparent;
  background-image: none;
  font-weight: 600;
}

button:focus {
  outline: 1px dotted;
  outline: 5px auto -webkit-focus-ring-color;
}

/* glass-morphism */
.glass {
  background: hsla(0, 0%, 100%, 0.4);
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
  border: 1px solid hsla(0, 0%, 100%, 0.2);
}

.glass:hover {
  background: hsla(0, 0%, 100%, 0.7);
  border: 1px solid #fff;
}

